force-app/main/default/objects/EmailSubjectPatternConfiguration__c/EmailSubjectPatternConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will hold the prefix and suffix for scanned emails. From the subject Case Reference Number will be extracted by using this settings.</description>
    <label>E2C Email Subject Pattern Configuration</label>
</CustomObject>