force-app/main/default/objects/EmailSubjectPatternConfiguration__c/fields/Erroneous_Case_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Erroneous_Case_Record_Type_Name__c</fullName>
    <label>Erroneous Case Record Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>