force-app/main/default/objects/EmailSubjectPatternConfiguration__c/fields/HandlerClass__c.field-meta.xml
<CustomField>
    <fullName>HandlerClass__c</fullName>
    <label>Handler Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>