force-app/main/default/objects/EmailSubjectPatternConfiguration__c/fields/New_Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Origin__c</fullName>
    <inlineHelpText>Provide default case origin for newly created case</inlineHelpText>
    <label>New Case Origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>