force-app/main/default/objects/EmailSubjectPatternConfiguration__c/fields/New_Case_Origin_Details__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Origin_Details__c</fullName>
    <label>New Case Origin Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>