force-app/main/default/objects/EmailSubjectPatternConfiguration__c/fields/New_Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Priority__c</fullName>
    <inlineHelpText>Set the priority for new case being created</inlineHelpText>
    <label>New Case Priority</label>
    <length>50</length>
    <type>Text</type>
</CustomField>