force-app/main/default/objects/EmailSubjectPatternConfiguration__c/fields/New_Case_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Record_Type_Name__c</fullName>
    <inlineHelpText>Please enter API name of the record type to be used for creating new case</inlineHelpText>
    <label>New Case Record Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>