force-app/main/default/objects/EmailSubjectPatternConfiguration__c/fields/New_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Status__c</fullName>
    <label>New Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>