force-app/main/default/objects/EmailSubjectPatternConfiguration__c/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <inlineHelpText>Case Reference Prefix e.g. Scanned email |||</inlineHelpText>
    <label>Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>