force-app/main/default/objects/EmailSubjectPatternConfiguration__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <inlineHelpText>Case Reference Number postfix in subject line e.g. |||</inlineHelpText>
    <label>Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>