force-app/main/default/objects/EmailSubjectPatternConfiguration__c/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <inlineHelpText>Email To Case - Configured email address</inlineHelpText>
    <label>To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>