force-app/main/default/objects/EmailSubjectPatternConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prefix__c</columns>
    <columns>Suffix__c</columns>
    <columns>New_Case_Origin__c</columns>
    <columns>New_Case_Origin_Details__c</columns>
    <columns>New_Case_Priority__c</columns>
    <columns>New_Case_Record_Type_Name__c</columns>
    <columns>HandlerClass__c</columns>
    <columns>Erroneous_Case_Record_Type_Name__c</columns>
    <columns>ToAddress__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>New_Case_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>